--- a/lol-items/src/App.css
+++ b/lol-items/src/App.css
@@ -119,6 +119,16 @@
   z-index: 1; /* 추가 */
 }
 
+.into-item {
+  width: 40px;
+  height: 40px;
+}
+
+.from-item {
+  width: 40px;
+  height: 40px;
+}
+
 .item:hover {
   transform: scale(1.05);
 }
@@ -286,7 +296,7 @@ body, .some-class {
 
 .item-details-overlay {
   position: fixed; /* fixed를 유지 */
-  width: 300px; /* 오버레이 너비 조정 */
+  width: 450px; /* 오버레이 너비 조정 */
   background-color: rgba(0, 0, 0, 0.9);
   color: white;
   padding: 15px;
