--- a/lol-items/src/App.css
+++ b/lol-items/src/App.css
@@ -323,13 +323,13 @@ body, .some-class {
   }
 
   .left-panel, .right-panel {
-    width: 100%;
+    width: 100%; /* 모바일에서 전체 너비로 설정 */
     padding: 10px;
   }
 
   .selected-items-container, .total-stats, .jack-of-all-trades {
     margin-bottom: 20px;
-    width: 250px;
+    width: 100%;
   }
 
   .item-list {
@@ -372,6 +372,16 @@ body, .some-class {
   .item-details-overlay {
     display: none;
   }
+
+  /* 추가된 모바일 스타일 */
+  .reset-button {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .slot-container {
+    grid-template-columns: repeat(2, 1fr); /* 모바일에서 2열로 변경 */
+  }
 }
 
 .selected-items.slot-container {
@@ -386,17 +396,4 @@ body, .some-class {
 .total-gold {
   color: #fff; /* White text for contrast */
   margin-right: 10px; /* Space between total gold and button */
-}
-
-.reset-button {
-  background-color: #555; /* Slightly lighter dark background for button */
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.reset-button:hover {
-  background-color: #777; /* Lighter background on hover */
 }
